<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="10dp"
    android:transitionName="transition_login"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginPageLogin"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/mail"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Email"
                    android:textCursorDrawable="@android:color/black"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/lockin"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Password"
                    android:textCursorDrawable="@android:color/black"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <!--                <CheckBox-->
                <!--                    android:id="@+id/check"-->
                <!--                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_centerVertical="true"-->
                <!--                    android:buttonTint="@android:color/black"-->
                <!--                    android:text="@string/remember"-->
                <!--                    android:textColor="@android:color/black" />-->


            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="letUserLogIn"
                android:background="@drawable/buttonslayout"
                android:text="@string/LoginPageLogin"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/forgetpassword_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#0000"
                    android:onClick="forgotPasswordscreen"
                    android:text="@string/Forgot"
                    android:textSize="10sp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:onClick="callSignUp"
                    android:background="#0000"
                    android:text="@string/create"
                    android:textSize="10sp"
                    android:textColor="@color/black" />
            </RelativeLayout>



        </LinearLayout>


    </LinearLayout>

</ScrollView>