...
            android:layout_marginTop="5dp"
            android:background="@drawable/layout"
            android:layout_centerHorizontal="true">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/tabSellersTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping_cart"

            android:elevation="5dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="Seller"
            android:background="#000000"/>
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/tabOrdersTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
