...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/startpage_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:fontFamily="sans-serif"
...
                    android:text="@string/Login"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:transitionName="transition_login" />

                <Button
                    android:id="@+id/startpage_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:fontFamily="sans-serif"
...
